# SciVis_Library

./: CMakeLists.txt  README  install.sh  serenoSciVis.pc.in
include/: CLManager.h  CSVParser.h  Color.h  ColorMode.h  SciVisColor.h  Triangulor.h  VolumetricSelection.h  sciVisUtils.h
include/Datasets/: BinaryDataset.h  CloudPointDataset.h  Dataset.h  DatasetMetadata.h  PointFieldDataset.h  PointFieldDesc.h  Snapshot.h  SubDataset.h  SubDatasetGroup.h  VTKDataset.h  VectorFieldDataset.h
include/Datasets/Annotation/: Annotation.h  AnnotationCanvas.h  AnnotationLog.h  AnnotationLogComponent.h  AnnotationLogContainer.h  AnnotationPosition.h  AnnotationStroke.h  AnnotationText.h  DrawableAnnotationLogComponent.h  DrawableAnnotationPosition.h  Log.h
include/SciVis/: computeVisualization.h
include/TransferFunction/: GTF.h  MergeTF.h  TFType.h  TransferFunction.h  TriangularGTF.h
src/: CLManager.cpp  CSVParser.cpp  Color.cpp  Triangulor.cpp  VolumetricSelection.cpp  sciVisUtils.cpp
src/Datasets/: BinaryDataset.cpp  CloudPointDataset.cpp  Dataset.cpp  DatasetMetadata.cpp  PointFieldDataset.cpp  SubDataset.cpp  SubDatasetGroup.cpp  VTKDataset.cpp  VectorFieldDataset.cpp
src/Datasets/Annotation/: Annotation.cpp  AnnotationCanvas.cpp  AnnotationLog.cpp  AnnotationLogComponent.cpp  AnnotationLogContainer.cpp  AnnotationStroke.cpp  AnnotationText.cpp  DrawableAnnotationLogComponent.cpp
src/SciVis/: computeVisualization.cpp
